--- a/Front-end/app/src/main/res/layout/activity_create_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_create_quiz.xml
@@ -10,7 +10,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="600dp">
+        android:id="@+id/scrollView"
+        android:layout_height="620dp">
         <LinearLayout
             android:id="@+id/question_create_layout"
             android:layout_width="match_parent"
@@ -50,8 +51,8 @@
     </ScrollView>
 
     <Button
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/scrollView"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/UI_finish"
