--- a/Front-end/app/src/main/res/layout/quiz_module_layout.xml
+++ b/Front-end/app/src/main/res/layout/quiz_module_layout.xml
@@ -56,6 +56,18 @@
         app:layout_constraintLeft_toRightOf="@id/go_to_quiz"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/delete_module_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/stats_button"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        app:srcCompat="@drawable/ic_baseline_delete_24"
+        android:contentDescription="@string/UI_delete" />
+
     <Button
         android:id="@+id/wrong_question_button"
         android:layout_width="wrap_content"
