--- a/Front-end/app/src/main/res/layout/activity_home.xml
+++ b/Front-end/app/src/main/res/layout/activity_home.xml
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/CREATE_CLASS"
-                android:src="@drawable/ic_baseline_add_24" />
+                app:srcCompat="@drawable/ic_baseline_add_24" />
 
         </LinearLayout>
 
