--- a/Front-end/app/src/main/res/layout/quiz_module_layout.xml
+++ b/Front-end/app/src/main/res/layout/quiz_module_layout.xml
@@ -31,18 +31,18 @@
         android:text="@string/go_to_quiz"
         android:textAllCaps="false"/>
 
-    <Button
-        android:id="@+id/notes_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:text="@string/UI_notes"
-        android:textAllCaps="false"
-        app:layout_constraintLeft_toRightOf="@id/quiz_module_name"
-        app:layout_constraintTop_toBottomOf="@+id/go_to_quiz" />
+<!--    <Button-->
+<!--        android:id="@+id/notes_button"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginBottom="10dp"-->
+<!--        android:layout_marginLeft="10dp"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:text="@string/UI_notes"-->
+<!--        android:textAllCaps="false"-->
+<!--        app:layout_constraintLeft_toRightOf="@id/quiz_module_name"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/go_to_quiz" />-->
 
     <Button
         android:id="@+id/stats_button"
@@ -76,10 +76,10 @@
         android:layout_marginBottom="10dp"
         android:text="@string/UI_wrong_questions"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@+id/stats_button"
+        app:layout_constraintTop_toBottomOf="@+id/go_to_quiz"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        app:layout_constraintLeft_toRightOf="@id/notes_button"
+        app:layout_constraintLeft_toRightOf="@id/quiz_module_name"
         tools:layout_editor_absoluteX="73dp" />
 
 
